--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .vs
 .vscode
+PauseSPT.sln
 dependencies/*.dll
-dependencies/3.5.8
-dependencies/3.6.1
+dependencies/3.7.0
 source/bin
 source/obj
 notes*.txt
+.DS_Store
